fix overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,6 +14,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-size: 16px;
   font-weight: 400;
